<resources>
    <string name="app_name">GalleryLock</string>
    <string name="Created_time">Created Time</string>
    <string name="Delete_error">Some Error Occured in Deleting.</string>
    <string name="Move_error">Some Error Occured in Moving.</string>
    <string name="Support_title">Support</string>
    <string name="Support_value">Support@newsoftwares.net</string>
    <string name="Unhide_error">Some Error Occured in Resotring.</string>
    <string name="Visit_title">Visit</string>
    <string name="Visit_value">http://www.newsoftwares.net</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_download">Download</string>
    <string name="action_more">More</string>
    <string name="action_ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="ad_unit_id">ca-app-pub-1217827138513731/9510539572</string>
    <string name="add_folder">Create Folder</string>
    <string name="add_folder_hint">Enter Folder Name</string>
    <string name="alert_dialogTopStorageOption">Select Storage Location</string>
    <string name="alert_dialog_phone_memory">Phone Memory</string>
    <string name="alert_dialog_sd_card">SD Card</string>
    <string name="app_4shared">4shared</string>
    <string name="app_Box">Box</string>
    <string name="app_Dropbox">Dropbox</string>
    <string name="app_Livejournal">LiveJournal</string>
    <string name="app_Technorati">Technorati</string>
    <string name="app_amazon">Amazon</string>
    <string name="app_blogger">Blogger</string>
    <string name="app_dailymotion">Dailymotion</string>
    <string name="app_delicious">Delicious</string>
    <string name="app_digg">Digg</string>
    <string name="app_diigo">diigo</string>
    <string name="app_docin">docin</string>
    <string name="app_docstoc">docstoc</string>
    <string name="app_ebay">ebay</string>
    <string name="app_ezinearticles">Ezine Articles</string>
    <string name="app_facebook">Facebook</string>
    <string name="app_flickr">Flickr</string>
    <string name="app_folkd">folkd</string>
    <string name="app_foursquare">Foursquare</string>
    <string name="app_google_plus">Google+</string>
    <string name="app_hi5">Hi5</string>
    <string name="app_imdb">IMDB</string>
    <string name="app_instagram">Instagram</string>
    <string name="app_instapaper">instapaper</string>
    <string name="app_issuu">issuu</string>
    <string name="app_linkedin">LinkedIn</string>
    <string name="app_meet_me">MeetMe</string>
    <string name="app_meetup">Meetup</string>
    <string name="app_myspace">Myspace</string>
    <string name="app_name1">My Calculator</string>
    <string name="app_name_disguised">NS Vault</string>
    <string name="app_pinterest">Pinterest</string>
    <string name="app_plurk">plurk</string>
    <string name="app_quora">Quora</string>
    <string name="app_reddit">Reddit</string>
    <string name="app_scoop">scoop</string>
    <string name="app_scribd">Scribd</string>
    <string name="app_skype">Skype</string>
    <string name="app_slideshare">slideshare</string>
    <string name="app_sound_cloud">SoundCloud</string>
    <string name="app_squidoo">squidoo</string>
    <string name="app_storify">storify</string>
    <string name="app_stumbleupon">Stumbleupon</string>
    <string name="app_tagged">Tagged</string>
    <string name="app_tumblr">Tumblr</string>
    <string name="app_twitter">Twitter</string>
    <string name="app_vimeo">Vimeo</string>
    <string name="app_wikipedia">Wikipedia</string>
    <string name="app_yahoo_answer">Yahoo answer</string>
    <string name="app_yelp">yelp</string>
    <string name="app_youtube">YouTube</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio">Audio</string>
    <string name="backup_emildilog_desc">If you don\'t set email address here, then your password will not be recovered. Any time you can set or change email address from Recovery of Credentials in Settings.</string>
    <string name="backup_emildilog_desctitle">Warning:</string>
    <string name="backup_emildilog_title">Enter email address to recover security credential</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cal_pin_text">Set calculator PIN and tap % sign to save</string>
    <string name="cal_pin_text_conf">Enter calculator PIN and tap % sign </string>
    <string name="cal_pin_text_confirm">Confirm calculator PIN and tap % sign to save</string>
    <string name="cannot_download">Can only download \"http\" or \"https\" URLs.</string>
    <string name="category_name">Category Name</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_agree_button">First select \"Agree\"</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="decoy_mode_toast_disguise">Decoy mode is not available because you set Calcualtor disguise mode.</string>
    <string name="del_bookmarks">Are you sure you want to delete bookmark(s) ?</string>
    <string name="del_download_history">Are you sure you want to delete browsing history ?</string>
    <string name="del_history">Are you sure you want to delete browsing history ?</string>
    <string name="delete">Delete</string>
    <string name="delete_entry">Are you sure you want to delete this entry ?</string>
    <string name="delete_note">Are you sure you want to delete this Note ?</string>
    <string name="delete_toast">Are you sure you want to Delete</string>
    <string name="delete_todo">Are you sure you want to delete this To do list ?</string>
    <string name="detail">Detail</string>
    <string name="dialog_download">Do you want to download this file?</string>
    <string name="disable_operation_cal">Only use digits 0 to 9</string>
    <string name="discard_changes">Are you sure you want to discard changes?</string>
    <string name="download_no_sdcard_dlg_msg">USB storage is required to download the file.</string>
    <string name="download_no_sdcard_dlg_title">No SD card</string>
    <string name="download_pending">Starting download…</string>
    <string name="download_sdcard_busy_dlg_msg">The storage is busy. To allow downloads, touch Turn Off USB Storage in the notification.</string>
    <string name="download_sdcard_busy_dlg_title">USB storage unavailable</string>
    <string name="dropbox_Audios">Audios</string>
    <string name="dropbox_Documents">Docs</string>
    <string name="dropbox_Photos">Photos</string>
    <string name="dropbox_Videos">Videos</string>
    <string name="edit">Edit</string>
    <string name="edit_options_deletephoto">Are you sure you want to Delete photo(s)?</string>
    <string name="edit_options_deletevideo">Are you sure you want to Delete video(s)?</string>
    <string name="empty_note">Can not save empty note</string>
    <string name="empty_note_folder">No note(s) added yet</string>
    <string name="empty_note_name">Please enter note name</string>
    <string name="empty_wallet_folder">No entry(s) added yet</string>
    <string name="enter_password">Enter password...</string>
    <string name="entry">Entry</string>
    <string name="lblDelayToLock">Delay to lock</string>
    <string name="lblDelayToLockDesc">Re-lock is not required when returning from a brief exit</string>
    <string name="lblDelaytimelimit">Delay time limit</string>
    <string name="lblHint">Hint</string>
    <string name="lblLockNewApp">Lock the new app</string>
    <string name="lblLockNewAppDesc">After you installed the new app, you can one tap to lock the app.</string>
    <string name="lblSave">Save</string>
    <string name="lblUntilscreenislocked">Until screen is locked</string>
    <string name="lbl_Photos_Album_Create_Album">Create Album</string>
    <string name="lbl_Photos_Album_Create_Album_hint">Enter album name</string>
    <string name="lbl_Skip">Skip</string>
    <string name="lbl_dislike">Dislike</string>
    <string name="lbl_later">Later</string>
    <string name="lbl_rate_desc">Then express your satisfaction by rating this app, rating the app takes few seconds...</string>
    <string name="lbl_rate_five_star">Rate 5 stars</string>
    <string name="lbl_rate_heading">Enjoying this app?</string>
    <string name="lblsdhintmsgbox">Your lollipop device has restricted access for SD card permissions. You must grant special permission to access SD card root directory.</string>
    <string name="lblsdhintmsgbox1">\"Please choose the root directory in external SD.\"</string>
    <string name="lblsdhintmsgbox2">Please follow below steps.</string>
    <string name="lblsetting_RecoveryofCredentials_email_hint">Enter email…</string>
    <string name="lblsetting_SecurityCredentials_setpassword_Cancel">Cancel</string>
    <string name="lblsetting_SecurityCredentials_setpassword_Continue">Continue</string>
    <string name="lblsetting_SecurityCredentials_setpassword_Ok">OK</string>
</resources>