<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_toalert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvalert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/lblHint"
            android:textColor="@color/Color_Secondary_Font"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Color_Menu_Thumb_Hover"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="7dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvmessagedialogtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/lblsdhintmsgbox"
            android:textColor="@color/Color_Menu_Thumb_Font"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvmessagedialogtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/lblsdhintmsgbox1"
            android:textColor="@color/Color_Menu_Thumb_Font"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvmessagedialogtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/lblsdhintmsgbox2"
            android:textColor="@color/Color_Menu_Thumb_Font"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/hint_popup_img" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_Cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bottom_baar_album"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/lblsetting_SecurityCredentials_setpassword_Cancel"
                android:textColor="@color/ColorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_Ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bottom_baar_album"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_Ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/lblsetting_SecurityCredentials_setpassword_Continue"
                android:textColor="@color/ColorWhite"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
