<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_email_popup_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ColorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_email_popup_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ColorAppTheme"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblEmail_popup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="10dp"
            android:text="@string/backup_emildilog_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/ColorWhite"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtemailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/list_login_option_click"
                android:ems="5"
                android:hint="@string/lblsetting_RecoveryofCredentials_email_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/ColorBluish">

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_email_warning_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="30dp"
                        android:paddingRight="8dp"
                        android:text="@string/backup_emildilog_desctitle"
                        android:textColor="@color/red_dark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lbl_email_warning_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="10dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/backup_emildilog_desc"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/red_dark"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_Save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bottom_baar_album"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/lblSave"
                android:textColor="@color/ColorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_Skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bottom_baar_album"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/lbl_Skip"
                android:textColor="@color/ColorWhite"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
