<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_background"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_popup_top_baar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ColorAppTheme"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/lbl_Create_Edit_Album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lbl_Photos_Album_Create_Album"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/ColorWhite"
            android:textSize="19sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/txt_AlbumName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/list_login_option_click"
        android:hint="@string/lbl_Photos_Album_Create_Album_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="20"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingRight="10dp"
        android:paddingBottom="8dp"
        android:textColor="@color/Color_Menu_Thumb_Font"
        android:textSize="17sp">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_Ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bottom_baar_album"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_Ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/lblsetting_SecurityCredentials_setpassword_Ok"
                android:textColor="@color/ColorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_Cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bottom_baar_album"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/lblsetting_SecurityCredentials_setpassword_Cancel"
                android:textColor="@color/ColorWhite"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
